src/frontend/parser.cc
//------------------------------------------------------------------------------
//  A SysY Compiler for PKU Compiling Principles Practice Course (2021 Spring)
//------------------------------------------------------------------------------
//  Project: sysyc
//  File: parser.cc
//  Created Date: 2021-04-29
//  Author: Zhong Xinghong (1700012608)
//  Email: zxh2017@pku.edu.cn
//------------------------------------------------------------------------------
//  Copyright (c) 2021 Zhong Xinghong
//------------------------------------------------------------------------------

#include <cassert>
#include <sstream>

#include "frontend/parser.h"

namespace sysyc
{
namespace frontend
{
using namespace middle::ast;

inline bool Parser::match_nth_keyword(std::size_t nth, const Keyword &kw)
{
  return lexer.peek_nth_token(nth) == Token::KEYWORD
      && lexer.peek_nth_kw_val(nth) == kw;
}

inline bool Parser::match_nth_separator(std::size_t nth, const char &sep)
{
  return lexer.peek_nth_token(nth) == Token::SEPARATOR
      && lexer.peek_nth_sep_val(nth) == sep;
}

inline bool Parser::match_nth_operator(std::size_t nth, const Operator &op)
{
  return lexer.peek_nth_token(nth) == Token::OPERATOR
      && lexer.peek_nth_op_val(nth) == op;
}

void Parser::report_error(const std::string &errmsg)
{
  std::stringstream sst;
  sst << "[Parser] At Line " << lexer.get_lineno() << ", Col " << lexer.get_colno()
      << ": " << errmsg;
  logger.error(sst.str());
}

ASTNode *Parser::generate_ast()
{
  next_token(); // init
  return parse_Program();
}

/**
 * Program       ::= {CompUnit};
 */
ASTNode *Parser::parse_Program()
{
  ASTNode *ast_Program = nullptr;
  std::vector<ASTNode *> ast_CompUnit_list;
  ASTNode *ast_CompUnit = nullptr;

  while (peek_nth_token(1) != Token::END)
  {
    if (peek_nth_token(1) == Token::ERROR)
    {
      report_error("In parse_Program, encounter Token::ERROR");
      goto CLEANUP;
    }

    if ((ast_CompUnit = parse_CompUnit()) == nullptr)
    {
      report_error("In parse_Program, expect CompUnit");
      goto CLEANUP;
    }

    ast_CompUnit_list.push_back(ast_CompUnit);
  }

  ast_Program = new ProgramASTNode(ast_CompUnit_list);

CLEANUP:
  if (!ast_Program)
  {
    for (auto &ast : ast_CompUnit_list)
      delete ast;
  }
  return ast_Program;
}

/**
 * CompUnit      ::= Decl | FuncDef;
 * Decl          ::= ConstDecl | VarDecl;
 * ConstDecl     ::= "const" BType ConstDef {"," ConstDef} ";";
 * VarDecl       ::= BType VarDef {"," VarDef} ";";
 * BType         ::= "int";
 * FuncDef       ::= FuncType IDENT "(" [FuncFParams] ")" Block;
 * FuncType      ::= "void" | "int";
 */
ASTNode *Parser::parse_CompUnit()
{
  ASTNode *ast_CompUnit = nullptr;
  ASTNode *ast_Decl = nullptr;
  ASTNode *ast_FuncDef = nullptr;

  if (match_nth_keyword(1, Keyword::CONST))
  {
    goto parse_CompUnit_Decl;
  }
  else if (match_nth_keyword(1, Keyword::VOID))
  {
    goto parse_CompUnit_FuncDef;
  }
  else if (match_nth_separator(3, '('))
  {
    goto parse_CompUnit_FuncDef;
  }
  else
  {
    goto parse_CompUnit_Decl;
  }

parse_CompUnit_Decl:
  if ((ast_Decl = parse_Decl()) == nullptr)
  {
    report_error("In parse_CompUnit, expect Decl");
    goto CLEANUP;
  }
  ast_CompUnit = ast_Decl;
  goto SUCCESS;

parse_CompUnit_FuncDef:
  if ((ast_FuncDef = parse_FuncDef()) == nullptr)
  {
    report_error("In parse_CompUnit, expect FuncDef");
    goto CLEANUP;
  }
  ast_CompUnit = ast_FuncDef;
  goto SUCCESS;

CLEANUP:
  if (!ast_CompUnit)
  {
    delete ast_FuncDef;
    delete ast_Decl;
  }
SUCCESS:
  return ast_CompUnit;
}

/**
 * Decl          ::= ConstDecl | VarDecl;
 * ConstDecl     ::= "const" BType ConstDef {"," ConstDef} ";";
 * VarDecl       ::= BType VarDef {"," VarDef} ";";
 */
ASTNode *Parser::parse_Decl()
{
  ASTNode *ast_Decl = nullptr;
  ASTNode *ast_ConstDecl = nullptr;
  ASTNode *ast_VarDecl = nullptr;

  if (match_nth_keyword(1, Keyword::CONST))
  {
    if ((ast_ConstDecl = parse_ConstDecl()) == nullptr)
    {
      report_error("In parse_Decl, expect ConstDecl");
      goto CLEANUP;
    }
    ast_Decl = ast_ConstDecl;
  }
  else
  {
    if ((ast_VarDecl = parse_VarDecl()) == nullptr)
    {
      report_error("In parse_Decl, expect VarDecl");
      goto CLEANUP;
    }
    ast_Decl = ast_VarDecl;
  }

CLEANUP:
  if (!ast_Decl)
  {
    delete ast_VarDecl;
    delete ast_ConstDecl;
  }
  return ast_Decl;
}

/**
 * BType         ::= "int";
 */
ASTNode *Parser::parse_BType()
{
  ASTNode *ast_BType = nullptr;

  if (peek_nth_token(1) == Token::KEYWORD)
  {
    switch (lexer.kw_val())
    {
    case Keyword::INT:
      next_token(); // eat "int"
      ast_BType = new PrimTypeASTNode(PrimTypeASTNode::Type::INT);
      break;
    default:
      break;
    }
  }

  if (!ast_BType)
    report_error("In parse_BType, expect \"int\"");

  return ast_BType;
}

/**
 * ConstDecl     ::= "const" BType ConstDef {"," ConstDef} ";";
 */
ASTNode *Parser::parse_ConstDecl()
{
  ASTNode *ast_ConstDecl = nullptr;
  ASTNode *ast_BType = nullptr;
  std::vector<ASTNode *> ast_ConstDef_list;
  ASTNode *ast_ConstDef = nullptr;

  if (!match_nth_keyword(1, Keyword::CONST))
  {
    report_error("In parse_ConstDecl, expect \"const\"");
    goto CLEANUP;
  }

  next_token(); // eat "const"

  if ((ast_BType = parse_BType()) == nullptr)
  {
    report_error("In parse_ConstDecl, expect BType");
    goto CLEANUP;
  }

  if ((ast_ConstDef = parse_ConstDef()) == nullptr)
  {
    report_error("In parse_ConstDecl, expect first ConstDef");
    goto CLEANUP;
  }

  ast_ConstDef_list.push_back(ast_ConstDef);

  for (;;)
  {
    if (match_nth_separator(1, ';'))
    {
      next_token(); // eat ';'
      break;
    }

    if (!match_nth_separator(1, ','))
    {
      report_error("In parse_ConstDecl, expect ',' before subsequent ConstDef");
      goto CLEANUP;
    }

    next_token(); // eat ','

    if ((ast_ConstDef = parse_ConstDef()) == nullptr)
    {
      report_error("In parse_ConstDecl, expect subsequent ConstDef");
      goto CLEANUP;
    }

    ast_ConstDef_list.push_back(ast_ConstDef);
  }

  ast_ConstDecl = new VarDeclASTNode(ast_BType, ast_ConstDef_list, true);

CLEANUP:
  if (!ast_ConstDecl)
  {
    for (auto &ast : ast_ConstDef_list)
      delete ast;
    delete ast_BType;
  }
  return ast_ConstDecl;
}

/**
 * ConstDef      ::= IDENT {"[" ConstExp "]"} "=" ConstInitVal;
 */
ASTNode *Parser::parse_ConstDef()
{
  ASTNode *ast_ConstDef = nullptr;
  std::vector<ASTNode *> ast_ConstExp_list;
  ASTNode *ast_ConstInitVal = nullptr;
  ASTNode *ast_ConstExp = nullptr;
  std::string id;

  if (peek_nth_token(1) != Token::ID)
  {
    report_error("In parse_ConstDef, expect IDENT");
    goto CLEANUP;
  }

  id = lexer.id_val();
  next_token(); // eat IDENT

  for (;;)
  {
    if (!match_nth_separator(1, '['))
      break;

    next_token(); // eat '['

    if ((ast_ConstExp = parse_ConstExp()) == nullptr)
    {
      report_error("In parse_ConstDef, expect ConstExp");
      goto CLEANUP;
    }

    ast_ConstExp_list.push_back(ast_ConstExp);

    if (!match_nth_separator(1, ']'))
    {
      report_error("In parse_ConstDef, expect ']' after ConstExp");
      goto CLEANUP;
    }

    next_token(); // eat ']'
  }

  if (!match_nth_operator(1, Operator::ASSIGN))
  {
    report_error("In parse_ConstDef, expect '='");
    goto CLEANUP;
  }

  next_token(); // eat '='

  if ((ast_ConstInitVal = parse_ConstInitVal()) == nullptr)
  {
    report_error("In parse_ConstDef, expect ConstInitVal");
    goto CLEANUP;
  }

  ast_ConstDef = new VarDefASTNode(id, ast_ConstExp_list, ast_ConstInitVal, true);

CLEANUP:
  if (!ast_ConstDef)
  {
    delete ast_ConstInitVal;
    for (auto &ast : ast_ConstExp_list)
      delete ast;
  }
  return ast_ConstDef;
}

/**
 * ConstInitVal  ::= ConstExp | "{" [ConstInitVal {"," ConstInitVal}] "}";
 */
ASTNode *Parser::parse_ConstInitVal()
{
  ASTNode *ast_ConstInitVal_result = nullptr;
  ASTNode *ast_ConstExp = nullptr;
  std::vector<ASTNode *> ast_ConstInitVal_list;
  ASTNode *ast_ConstInitVal = nullptr;

  if (!match_nth_separator(1, '{'))
  {
    if ((ast_ConstExp = parse_ConstExp()) == nullptr)
    {
      report_error("In parse_ConstInitVal, expect ConstExp");
      goto CLEANUP;
    }
    ast_ConstInitVal_result = ast_ConstExp;
  }
  else
  {
    next_token(); // eat '{'

    for (;;)
    {
      if (match_nth_separator(1, '}'))
      {
        next_token(); // eat '}'
        break;
      }

      if (!ast_ConstInitVal_list.empty())
      {
        if (!match_nth_separator(1, ','))
        {
          report_error("In parse_ConstInitVal, expect ',' before subsequent ConstInitVal");
          goto CLEANUP;
        }
        next_token(); // eat ','
      }

      if ((ast_ConstInitVal = parse_ConstInitVal()) == nullptr)
      {
        if (ast_ConstInitVal_list.empty())
          report_error("In parse_ConstInitVal, expect first ConstInitVal");
        else
          report_error("In parse_ConstInitVal, expect subsequent ConstInitVal");

        goto CLEANUP;
      }

      ast_ConstInitVal_list.push_back(ast_ConstInitVal);
    }

    ast_ConstInitVal_result = new InitValListASTNode(ast_ConstInitVal_list, true);
  }

CLEANUP:
  if (!ast_ConstInitVal_result)
  {
    for (auto &ast : ast_ConstInitVal_list)
      delete ast;
    delete ast_ConstExp;
  }
  return ast_ConstInitVal_result;
}

/**
 * VarDecl       ::= BType VarDef {"," VarDef} ";";
 */
ASTNode *Parser::parse_VarDecl()
{
  ASTNode *ast_VarDecl = nullptr;
  ASTNode *ast_BType = nullptr;
  std::vector<ASTNode *> ast_VarDef_list;
  ASTNode *ast_VarDef = nullptr;

  if ((ast_BType = parse_BType()) == nullptr)
  {
    report_error("In parse_VarDecl, expect BType");
    goto CLEANUP;
  }

  if ((ast_VarDef = parse_VarDef()) == nullptr)
  {
    report_error("In parse_VarDecl, expect first VarDef");
    goto CLEANUP;
  }

  ast_VarDef_list.push_back(ast_VarDef);

  for (;;)
  {
    if (match_nth_separator(1, ';'))
    {
      next_token(); // eat ';'
      break;
    }

    if (!match_nth_separator(1, ','))
    {
      report_error("In parse_VarDecl, expect ',' before subsequent VarDef");
      goto CLEANUP;
    }

    next_token(); // eat ','

    if ((ast_VarDef = parse_VarDef()) == nullptr)
    {
      report_error("In parse_VarDecl, expect subsequent VarDef");
      goto CLEANUP;
    }

    ast_VarDef_list.push_back(ast_VarDef);
  }

  ast_VarDecl = new VarDeclASTNode(ast_BType, ast_VarDef_list, false);

CLEANUP:
  if (!ast_VarDecl)
  {
    for (auto &ast : ast_VarDef_list)
      delete ast;
    delete ast_BType;
  }
  return ast_VarDecl;
}

/**
 * VarDef        ::= IDENT {"[" ConstExp "]"}
 *                 | IDENT {"[" ConstExp "]"} "=" InitVal;
 */
ASTNode *Parser::parse_VarDef()
{
  ASTNode *ast_VarDef = nullptr;
  std::vector<ASTNode *> ast_ConstExp_list;
  ASTNode *ast_InitVal = nullptr;
  ASTNode *ast_ConstExp = nullptr;
  std::string id;

  if (peek_nth_token(1) != Token::ID)
  {
    report_error("In parse_VarDef, expect IDENT");
    goto CLEANUP;
  }

  id = lexer.id_val();
  next_token(); // eat IDENT

  for (;;)
  {
    if (!match_nth_separator(1, '['))
      break;

    next_token(); // eat '['

    if ((ast_ConstExp = parse_ConstExp()) == nullptr)
    {
      report_error("In parse_VarDef, expect ConstExp after '['");
      goto CLEANUP;
    }

    ast_ConstExp_list.push_back(ast_ConstExp);

    if (!match_nth_separator(1, ']'))
    {
      report_error("In parse_VarDef, expect ']' after ConstExp");
      goto CLEANUP;
    }

    next_token(); // eat ']'
  }

  if (match_nth_operator(1, Operator::ASSIGN))
  {
    next_token(); // eat '='

    if ((ast_InitVal = parse_InitVal()) == nullptr)
    {
      report_error("In parse_VarDef, expect InitVal after '='");
      goto CLEANUP;
    }
  }

  ast_VarDef = new VarDefASTNode(id, ast_ConstExp_list, ast_InitVal, false);

CLEANUP:
  if (!ast_VarDef)
  {
    delete ast_InitVal;
    for (auto &ast : ast_ConstExp_list)
      delete ast;
  }
  return ast_VarDef;
}

/**
 * InitVal       ::= Exp | "{" [InitVal {"," InitVal}] "}";
 */
ASTNode *Parser::parse_InitVal()
{
  ASTNode *ast_InitVal_result = nullptr;
  ASTNode *ast_Exp = nullptr;
  std::vector<ASTNode *> ast_InitVal_list;
  ASTNode *ast_InitVal = nullptr;

  if (!match_nth_separator(1, '{'))
  {
    if ((ast_Exp = parse_Exp()) == nullptr)
    {
      report_error("In parse_InitVal, expect Exp");
      goto CLEANUP;
    }
    ast_InitVal_result = ast_Exp;
  }
  else
  {
    next_token(); // eat '{'

    for (;;)
    {
      if (match_nth_separator(1, '}'))
      {
        next_token(); // eat '}'
        break;
      }

      if (!ast_InitVal_list.empty())
      {
        if (!match_nth_separator(1, ','))
        {
          report_error("In parse_InitVal, expect ',' before subsequent InitVal");
          goto CLEANUP;
        }
        next_token(); // eat ','
      }

      if ((ast_InitVal = parse_InitVal()) == nullptr)
      {
        if (ast_InitVal_list.empty())
          report_error("In parse_InitVal, expect first InitVal");
        else
          report_error("In parse_InitVal, expect subsequent InitVal");

        goto CLEANUP;
      }

      ast_InitVal_list.push_back(ast_InitVal);
    }

    ast_InitVal_result = new InitValListASTNode(ast_InitVal_list, false);
  }

CLEANUP:
  if (!ast_InitVal_result)
  {
    for (auto &ast : ast_InitVal_list)
      delete ast;
    delete ast_Exp;
  }
  return ast_InitVal_result;
}

/**
 * FuncDef       ::= FuncType IDENT "(" [FuncFParams] ")" Block;
 */
ASTNode *Parser::parse_FuncDef()
{
  ASTNode *ast_FuncDef = nullptr;
  ASTNode *ast_FuncType = nullptr;
  ASTNode *ast_FuncFParams = nullptr;
  ASTNode *ast_Block = nullptr;
  std::string id;

  if ((ast_FuncType = parse_FuncType()) == nullptr)
  {
    report_error("In parse_FuncDef, expect FuncType");
    goto CLEANUP;
  }

  if (peek_nth_token(1) != Token::ID)
  {
    report_error("In parse_FuncDef, expect IDENT");
    goto CLEANUP;
  }

  id = lexer.id_val();
  next_token(); // eat IDENT

  if (!match_nth_separator(1, '('))
  {
    report_error("In parse_FuncDef, expect '('");
    goto CLEANUP;
  }

  next_token(); // eat '('

  if (match_nth_separator(1, ')'))
  {
    next_token(); // eat ')'
  }
  else
  {
    if ((ast_FuncFParams = parse_FuncFParams()) == nullptr)
    {
      report_error("In parse_FuncDef, expect FuncFParams");
      goto CLEANUP;
    }

    if (!match_nth_separator(1, ')'))
    {
      report_error("In parse_FuncDef, expect ')'");
      goto CLEANUP;
    }

    next_token(); // eat ')'
  }

  if ((ast_Block = parse_Block()) == nullptr)
  {
    report_error("In parse_FuncDef, expect Block");
    goto CLEANUP;
  }

  ast_FuncDef = new FuncDefASTNode(ast_FuncType, id, ast_FuncFParams, ast_Block);

CLEANUP:
  if (!ast_FuncDef)
  {
    delete ast_Block;
    delete ast_FuncFParams;
    delete ast_FuncType;
  }
  return ast_FuncDef;
}

/**
 * FuncType      ::= "void" | "int";
 */
ASTNode *Parser::parse_FuncType()
{
  ASTNode *ast_FuncType = nullptr;

  if (peek_nth_token(1) == Token::KEYWORD)
  {
    switch (lexer.kw_val())
    {
    case Keyword::VOID:
      next_token(); // eat "void"
      ast_FuncType = new PrimTypeASTNode(PrimTypeASTNode::Type::VOID);
      break;
    case Keyword::INT:
      next_token(); // eat "int"
      ast_FuncType = new PrimTypeASTNode(PrimTypeASTNode::Type::INT);
      break;
    default:
      break;
    }
  }

  if (!ast_FuncType)
    report_error("In parse_FuncType, expect \"void\" / \"int\"");

  return ast_FuncType;
}

/**
 * FuncFParams   ::= FuncFParam {"," FuncFParam};
 */
ASTNode *Parser::parse_FuncFParams()
{
  ASTNode *ast_FuncFParams = nullptr;
  std::vector<ASTNode *> ast_FuncFParam_list;
  ASTNode *ast_FuncFParam = nullptr;

  if ((ast_FuncFParam = parse_FuncFParam()) == nullptr)
  {
    report_error("In parse_FuncFParams, expect first FuncFParam");
    goto CLEANUP;
  }

  ast_FuncFParam_list.push_back(ast_FuncFParam);

  for (;;)
  {
    if (!match_nth_separator(1, ','))
      break;

    next_token(); // ','

    if ((ast_FuncFParam = parse_FuncFParam()) == nullptr)
    {
      report_error("In parse_FuncFParams, expect subsequent FuncFParam");
      goto CLEANUP;
    }

    ast_FuncFParam_list.push_back(ast_FuncFParam);
  }

  ast_FuncFParams = new FuncFParamListASTNode(ast_FuncFParam_list);

CLEANUP:
  if (!ast_FuncFParams)
  {
    for (auto &ast : ast_FuncFParam_list)
      delete ast;
  }
  return ast_FuncFParams;
}

/**
 * FuncFParam    ::= BType IDENT ["[" "]" {"[" ConstExp "]"}];
 */
ASTNode *Parser::parse_FuncFParam()
{
  ASTNode *ast_FuncFParam = nullptr;
  ASTNode *ast_BType = nullptr;
  std::vector<ASTNode *> ast_ConstExp_list;
  ASTNode *ast_ConstExp = nullptr;
  std::string id;

  if ((ast_BType = parse_BType()) == nullptr)
  {
    report_error("In parse_FuncFParam, expect BType");
    goto CLEANUP;
  }

  id = lexer.id_val();
  next_token(); // eat IDENT

  if (match_nth_separator(1, '['))
  {
    next_token(); // eat '['

    if (!match_nth_separator(1, ']'))
    {
      report_error("In parse_FuncFParam, expect ']' after first '['");
      goto CLEANUP;
    }

    next_token(); // eat ']'

    ast_ConstExp_list.push_back(nullptr); // add nullptr to represent []
  }

  for (;;)
  {
    if (!match_nth_separator(1, '['))
      break;

    next_token(); // eat '['

    if ((ast_ConstExp = parse_ConstExp()) == nullptr)
    {
      report_error("In parse_FuncFParam, expect ConstExp after subsequent '['");
      goto CLEANUP;
    }

    ast_ConstExp_list.push_back(ast_ConstExp);

    if (!match_nth_separator(1, ']'))
    {
      report_error("In parse_FuncFParam, expect ']' after ConstExp");
      goto CLEANUP;
    }

    next_token(); // eat ']'
  }

  ast_FuncFParam = new FuncFParamASTNode(ast_BType, id, ast_ConstExp_list);

CLEANUP:
  if (!ast_FuncFParam)
  {
    for (auto &ast : ast_ConstExp_list)
      delete ast;
    delete ast_BType;
  }
  return ast_FuncFParam;
}

/**
 * Block         ::= "{" {BlockItem} "}";
 */
ASTNode *Parser::parse_Block()
{
  ASTNode *ast_Block = nullptr;
  std::vector<ASTNode *> ast_BlockItem_list;
  ASTNode *ast_BlockItem = nullptr;

  if (!match_nth_separator(1, '{'))
  {
    report_error("In parse_Block, expect '{'");
    goto CLEANUP;
  }

  next_token(); // eat '{'

  for (;;)
  {
    if (match_nth_separator(1, '}'))
    {
      next_token(); // eat '}'
      break;
    }

    if ((ast_BlockItem = parse_BlockItem()) == nullptr)
    {
      report_error("In parse_Block, expect BlockItem");
      goto CLEANUP;
    }

    ast_BlockItem_list.push_back(ast_BlockItem);
  }

  ast_Block = new BlockASTNode(ast_BlockItem_list);

CLEANUP:
  if (!ast_Block)
  {
    for (auto &ast : ast_BlockItem_list)
      delete ast;
  }
  return ast_Block;
}

/**
 * BlockItem     ::= Decl | Stmt;
 * Stmt          ::= LVal "=" Exp ";"
 *                 | [Exp] ";"
 *                 | Block
 *                 | "if" "(" Cond ")" Stmt ["else" Stmt]
 *                 | "while" "(" Cond ")" Stmt
 *                 | "break" ";"
 *                 | "continue" ";"
 *                 | "return" [Exp] ";";
 * Decl          ::= ConstDecl | VarDecl;
 * ConstDecl     ::= "const" BType ConstDef {"," ConstDef} ";";
 * VarDecl       ::= BType VarDef {"," VarDef} ";";
 */
ASTNode *Parser::parse_BlockItem()
{
  ASTNode *ast_BlockItem = nullptr;
  ASTNode *ast_Decl = nullptr;
  ASTNode *ast_Stmt = nullptr;

  if (match_nth_keyword(1, Keyword::CONST) ||
      match_nth_keyword(1, Keyword::INT))
  {
    if ((ast_Decl = parse_Decl()) == nullptr)
    {
      report_error("In parse_BlockItem, expect Decl");
      goto CLEANUP;
    }
    ast_BlockItem = ast_Decl;
  }
  else
  {
    if ((ast_Stmt = parse_Stmt()) == nullptr)
    {
      report_error("In parse_BlockItem, expect Stmt");
      goto CLEANUP;
    }
    ast_BlockItem = ast_Stmt;
  }

CLEANUP:
  if (!ast_BlockItem)
  {
    delete ast_Stmt;
    delete ast_Decl;
  }
  return ast_BlockItem;
}

/**
 * Stmt          ::= AssignStmt | BareStmt | Block | IfElseStmt
 *                 | WhileStmt | ControlStmt;
 * AssignStmt    ::= LVal "=" Exp ";";
 * BareStmt      ::= [Exp] ";";
 * IfElseStmt    ::= "if" "(" Cond ")" Stmt ["else" Stmt];
 * WhileStmt     ::= "while" "(" Cond ")" Stmt;
 * ControlStmt   ::= "break" ";"
 *                 | "continue" ";"
 *                 | "return" [Exp] ";";
 */
ASTNode *Parser::parse_Stmt()
{
  ASTNode *ast_Stmt = nullptr;
  ASTNode *ast_AssignStmt_BareStmt = nullptr;
  ASTNode *ast_Block = nullptr;
  ASTNode *ast_IfElseStmt = nullptr;
  ASTNode *ast_WhileStmt = nullptr;
  ASTNode *ast_ControlStmt = nullptr;

  if (peek_nth_token(1) == Token::KEYWORD)
  {
    switch (lexer.kw_val())
    {
    case Keyword::IF:
    {
      if ((ast_IfElseStmt = parse_IfElseStmt()) == nullptr)
      {
        report_error("In parse_Stmt, expect IfElseStmt");
        goto CLEANUP;
      }
      ast_Stmt = ast_IfElseStmt;
      break;
    }
    case Keyword::WHILE:
    {
      if ((ast_WhileStmt = parse_WhileStmt()) == nullptr)
      {
        report_error("In parse_Stmt, expect WhileStmt");
        goto CLEANUP;
      }
      ast_Stmt = ast_WhileStmt;
      break;
    }
    case Keyword::BREAK:
    case Keyword::CONTINUE:
    case Keyword::RETURN:
    {
      if ((ast_ControlStmt = parse_ControlStmt()) == nullptr)
      {
        report_error("In parse_Stmt, expect ControlStmt");
        goto CLEANUP;
      }
      ast_Stmt = ast_ControlStmt;
      break;
    }
    default:
    {
      std::string s_kw;

      if (!__impl::kw_enum2str(lexer.kw_val(), &s_kw))
      {
        report_error("In parse_Stmt, unable to convert Keyword "
                    + std::to_string(static_cast<int>(lexer.kw_val()))
                    + " to std::string");
        goto CLEANUP;
      }

      report_error("In parse_Stmt, unexpected keyword \"" + s_kw + "\"");
      goto CLEANUP;
    }
    }
  }
  else if (match_nth_separator(1, '{'))
  {
    if ((ast_Block = parse_Block()) == nullptr)
    {
      report_error("In parse_Stmt, expect Block");
      goto CLEANUP;
    }
    ast_Stmt = ast_Block;
  }
  else
  {
    if ((ast_AssignStmt_BareStmt = parse_AssignStmt_BareStmt()) == nullptr)
    {
      report_error("In parse_Stmt, expect AssignStmt / BareStmt");
      goto CLEANUP;
    }
    ast_Stmt = ast_AssignStmt_BareStmt;
  }

CLEANUP:
  if (!ast_Stmt)
  {
    delete ast_ControlStmt;
    delete ast_WhileStmt;
    delete ast_IfElseStmt;
    delete ast_Block;
    delete ast_AssignStmt_BareStmt;
  }
  return ast_Stmt;
}

/**
 * AssignStmt    ::= LVal "=" Exp ";";
 * BareStmt      ::= [Exp] ";";
 */
ASTNode *Parser::parse_AssignStmt_BareStmt()
{
  ASTNode *ast_Stmt_result = nullptr;
  ASTNode *ast_LVal = nullptr;
  ASTNode *ast_Exp = nullptr;

  if (match_nth_separator(1, ';'))
  {
    next_token(); // eat ';'
    goto SUCCESS;
  }
